--- a/ss8/bai2/ss8_bai2.html
+++ b/ss8/bai2/ss8_bai2.html
@@ -57,7 +57,7 @@
 
         .shop-deals {
             background-color: #0067b8;
-            color: #fff !important;
+            color: #fff;
             font-weight: bold;
             padding: 6px 14px;
             margin-left: 15px;
